# orb-slam3-spatial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  environment.yml
.github/workflows/: build.yml
Examples/Monocular/: Generic720.yaml  TUM1_tuned.yaml  mono_stream.cc  mono_tum.cc
include/: Atlas.h  KeyFrame.h  LoopClosing.h  Map.h  MapPoint.h  SocketPublisher.h  System.h  socket_publisher.h
patches/: 01-binary-vocab.patch  02-gcc11-unordered-map.patch  03-atlas-combine-api.patch  04-map-combine-api.patch  05-system-binary-vocab.patch  06-system-getatlas.patch  07-orbslam-cxx17.patch  08-loopclosing-cxx17-bool-increment.patch  09-map-friend-access.patch
scripts/: apply-patches.sh  build-orb-slam3.sh  build-pangolin.sh  build.sh
src/: Atlas.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  SocketPublisher.cc  System.cc  Tracking.cc  Viewer.cc  main_tum.cc  socket_publisher.cc
tools/: combine_atlas.cpp
